# FastApiLearning

Day1/: main.py  pyproject.toml
Day2/intro/: pyproject.toml
Day2/intro/intro/: main.py
Day3/: main.py  pyproject.toml
Day4_CRUD/: pyproject.toml
Day4_CRUD/app/: main.py
Day5_DBs/: .env  pyproject.toml
Day5_DBs/app/: db.py  main.py
